--- a/style.css
+++ b/style.css
@@ -2,4 +2,45 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  background-color: antiquewhite;
 }
+
+h1 {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin: auto;
+}
+
+nav {
+  text-transform: uppercase;
+  text-align: center;
+}
+
+nav a {
+  padding: 5px 10px;
+  background-color:red;
+}
+
+figcaption {
+  text-align: center;
+}
+
+#featured-property p {
+  display: block;
+  margin: auto;
+  width: 800px;
+  text-align: center;
+  padding: 10px 0;
+
+}
+
+#details div {
+  text-align: center;
+  float: left;
+  width: 25%;
+  background-color: red; 
+}
+
